<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary400">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.statement.NewStatementFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_statement_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/new_statement_title"
                android:textAllCaps="true"
                android:textColor="@color/title"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/label_date_of_accident"
                app:boxBackgroundColor="@color/input_field_background"
                app:boxStrokeColor="@color/primary800">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_statement_accident_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@color/input_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_date_time_picker"
                style="@style/PrimaryBottomRoundedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_pick_date"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/label_location"
                app:boxBackgroundColor="@color/input_field_background"
                app:boxStrokeColor="@color/primary800">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_statement_accident_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/input_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_statement_accident_location"
                style="@style/PrimaryBottomRoundedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:text="@string/statement_track_location_button"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_statement_accident_injured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/statement_injured_checkbox" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tv_statement_accident_material_damage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginBottom="-5dp"
                    android:background="@color/white"
                    android:backgroundTint="@color/title"
                    android:padding="5dp"
                    android:text="@string/statement_material_damage_title"
                    app:layout_constraintBottom_toTopOf="@id/fl_statement_accident_material_damage"
                    app:layout_constraintStart_toStartOf="@+id/fl_statement_accident_material_damage"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/fl_statement_accident_material_damage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/border_filled"
                    android:orientation="vertical"
                    android:paddingTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_statement_accident_material_damage">

                    <CheckBox
                        android:id="@+id/cb_statement_accident_material_damage_other_vehicles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statement_material_damage_other_vehicles_checkbox" />

                    <CheckBox
                        android:id="@+id/cb_statement_accident_material_damage_other_objects"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statement_material_damage_other_than_vehicles_checkbox" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_statement_witness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/statement_witness_title"
                android:textAllCaps="true"
                android:textColor="@color/title"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border_outlined_black"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_statement_witness_present"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/no_witness_checkbox" />

                <LinearLayout
                    android:id="@+id/ll_statement_witness_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/name"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_statement_witness_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/label_address"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_statement_witness_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="15dp"
                        android:hint="@string/label_phone_number"
                        app:boxBackgroundColor="@color/input_field_background"
                        app:boxStrokeColor="@color/primary800">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_statement_witness_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/input_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="12dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_statement_accident_previous"
                    style="@style/SecondaryRoundedButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:enabled="false"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/statement_back_button"
                    tools:ignore="ButtonStyle" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_statement_accident_next"
                    style="@style/PrimaryRoundedButton"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/statement_front_button"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</ScrollView>